# nanoEQXGPT.jax-metal

./: .gitignore  GPT2.ipynb  README.md  environment.yml  exp.ipynb  model.py  pyproject.toml  requirements.txt  sample.py  test.ipynb  train.py
config/: train_new_tinystories.py  train_tinystories.py
data/new_tinystories/: prepare_new.py  tokenizer-tinystories.json  train_tokenizer_new.py
