[project]
name = "nanoeqxgpt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=3.2.0",
    "equinox>=0.11.11",
    "jax[cuda]>=0.5.0",
    "numpy>=2.2.3",
    "optax>=0.2.4",
    "tensorboard>=2.19.0",
    "tensorboardx>=2.6.2.2",
    "tiktoken>=0.8.0",
    "tqdm>=4.67.1",
    "wandb>=0.19.6",
]
